Fix patron actions dropdown visibility

--- a/rails/app/stylesheets/admin/_layout.scss
+++ b/rails/app/stylesheets/admin/_layout.scss
@@ -1107,7 +1107,7 @@ body.admin-body--internal .admin-layout--public .admin-main {
 
 .patron-actions-menu {
   position: absolute;
-  top: calc(100% + 0.35rem);
+  bottom: calc(100% + 0.35rem);
   right: 0;
   display: none;
   flex-direction: column;
